fixed a bug where input field text was unreadable in dark mode

--- a/packages/@nucleus/app/styles/doc/_dark-mode-theme.scss
+++ b/packages/@nucleus/app/styles/doc/_dark-mode-theme.scss
@@ -159,6 +159,13 @@ body.dark {
     color: #ddd;
   }
 
+  input,
+  optgroup,
+  select,
+  textarea {
+    color: #000;
+  }
+
   .playground-container {
     border-bottom: 1px dotted #202020;
 
